@@ -147,9 +147,15 @@ public enum FieldKey
     RANKING,
     RATING,
     RECORD_LABEL,
+    RECORDINGDATE,
+    RECORDINGSTARTDATE,
+    RECORDINGENDDATE,
+    RECORDINGLOCATION,
     REMIXER,
+    SECTION,
     SCRIPT,
     SINGLE_DISC_TRACK_NO,
+    SONGKONG_ID,
     SUBTITLE,
     TAGS,
     TEMPO,
