@@ -504,9 +504,15 @@ public class ID3v23Frames extends ID3Frames
         tagFieldToId3.put(FieldKey.RANKING, ID3v23FieldKey.RANKING);
         tagFieldToId3.put(FieldKey.RATING, ID3v23FieldKey.RATING);
         tagFieldToId3.put(FieldKey.RECORD_LABEL, ID3v23FieldKey.RECORD_LABEL);
+        tagFieldToId3.put(FieldKey.RECORDINGDATE, ID3v23FieldKey.RECORDINGDATE);
+        tagFieldToId3.put(FieldKey.RECORDINGSTARTDATE, ID3v23FieldKey.RECORDINGSTARTDATE);
+        tagFieldToId3.put(FieldKey.RECORDINGENDDATE, ID3v23FieldKey.RECORDINGENDDATE);
+        tagFieldToId3.put(FieldKey.RECORDINGLOCATION, ID3v23FieldKey.RECORDINGLOCATION);
         tagFieldToId3.put(FieldKey.REMIXER, ID3v23FieldKey.REMIXER);
         tagFieldToId3.put(FieldKey.SCRIPT, ID3v23FieldKey.SCRIPT);
+        tagFieldToId3.put(FieldKey.SECTION, ID3v23FieldKey.SECTION);
         tagFieldToId3.put(FieldKey.SINGLE_DISC_TRACK_NO, ID3v23FieldKey.SINGLE_DISC_TRACK_NO);
+        tagFieldToId3.put(FieldKey.SONGKONG_ID, ID3v23FieldKey.SONGKONG_ID);
         tagFieldToId3.put(FieldKey.SUBTITLE, ID3v23FieldKey.SUBTITLE);
         tagFieldToId3.put(FieldKey.TAGS, ID3v23FieldKey.TAGS);
         tagFieldToId3.put(FieldKey.TEMPO, ID3v23FieldKey.TEMPO);
