@@ -138,9 +138,15 @@ public enum ID3v24FieldKey
     RANKING(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.RANKING, Id3FieldType.TEXT),
     RATING(ID3v24Frames.FRAME_ID_POPULARIMETER, Id3FieldType.TEXT),
     RECORD_LABEL(ID3v24Frames.FRAME_ID_PUBLISHER, Id3FieldType.TEXT),
+    RECORDINGDATE(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.RECORDINGDATE, Id3FieldType.TEXT),
+    RECORDINGSTARTDATE(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.RECORDINGSTARTDATE, Id3FieldType.TEXT),
+    RECORDINGENDDATE(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.RECORDINGENDDATE, Id3FieldType.TEXT),
+    RECORDINGLOCATION(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.RECORDINGLOCATION, Id3FieldType.TEXT),
     REMIXER(ID3v24Frames.FRAME_ID_REMIXED, Id3FieldType.TEXT),
     SCRIPT(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.SCRIPT, Id3FieldType.TEXT),
+    SECTION(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.SECTION, Id3FieldType.TEXT),
     SINGLE_DISC_TRACK_NO(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.SINGLE_DISC_TRACK_NO, Id3FieldType.TEXT),
+    SONGKONG_ID(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.SONGKONG_ID, Id3FieldType.TEXT),
     SUBTITLE(ID3v24Frames.FRAME_ID_TITLE_REFINEMENT, Id3FieldType.TEXT),
     TAGS(ID3v24Frames.FRAME_ID_USER_DEFINED_INFO, FrameBodyTXXX.TAGS, Id3FieldType.TEXT),
     TEMPO(ID3v24Frames.FRAME_ID_COMMENT, FrameBodyCOMM.MM_TEMPO,Id3FieldType.TEXT),
