@@ -166,10 +166,16 @@ public enum VorbisCommentFieldKey
     QUALITY("QUALITY",EnumSet.of(Tagger.MEDIA_MONKEY)),
     RANKING("RANKING",EnumSet.of(Tagger.JAIKOZ)),
     RATING("RATING",EnumSet.of(Tagger.MEDIA_MONKEY)),
+    RECORDINGDATE("RECORDINGDATE",EnumSet.of(Tagger.ROON)),
+    RECORDINGSTARTDATE("RECORDINGSTARTDATE",EnumSet.of(Tagger.ROON)),
+    RECORDINGENDDATE("RECORDINGENDDATE",EnumSet.of(Tagger.ROON)),
+    RECORDINGLOCATION("RECORDINGLOCATION",EnumSet.of(Tagger.ROON)),
     RELEASECOUNTRY("RELEASECOUNTRY",EnumSet.of(Tagger.PICARD,Tagger.JAIKOZ)),
     REMIXER("REMIXER",EnumSet.of(Tagger.PICARD,Tagger.JAIKOZ)),
     SCRIPT("SCRIPT",EnumSet.of(Tagger.JAIKOZ)),
+    SECTION("SECTION",EnumSet.of(Tagger.ROON)),
     SINGLE_DISC_TRACK_NO("SINGLE_DISC_TRACK_NO",EnumSet.of(Tagger.JAIKOZ)),
+    SONGKONG_ID("SONGKONG_ID",EnumSet.of(Tagger.SONGKONG)),
     SOURCEMEDIA("SOURCEMEDIA",EnumSet.of(Tagger.XIPH)),
     SUBTITLE("SUBTITLE",EnumSet.of(Tagger.PICARD,Tagger.JAIKOZ)),
     TAGS("TAGS",EnumSet.of(Tagger.JAIKOZ)),
